syntax = "proto3";

package proto;

option go_package = "astigo/pkg/proto;proto";

service FooService {
  rpc Create(CreateFooRequest) returns (FooResponse);
  rpc Get(GetFooRequest) returns (FooResponse);
  rpc Update(UpdateFooRequest) returns (FooResponse);
  rpc Delete(DeleteFooRequest) returns (DeleteFooResponse);
  rpc List(ListFoosRequest) returns (ListFoosResponse);
}

message Foo {
  string id = 1;       // UUID
  string label = 2;
  int32 value = 3;
  float weight = 4;
}

message CreateFooRequest {
  string label = 1;
  string secret = 2;
  int32 value = 3;
  float weight = 4;
}

message GetFooRequest {
  string id = 1; // UUID
}

message UpdateFooRequest {
  string id = 1; // UUID
  string label = 2;
  string secret = 3;
  int32 value = 4;
  float weight = 5;
}

message DeleteFooRequest {
  string id = 1; // UUID
}

message FooResponse {
  Foo foo = 1;
}

// RequÃªte de liste
message ListFoosRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ListFoosResponse {
  repeated Foo foos = 1;
}

message DeleteFooResponse {
  bool success = 1;
}
